Wed Jun 16 15:40:53 2010  NAKAMURA Usaku  <usa@ruby-lang.org>

	* error.c (rb_bug): existance of _set_abort_behavior() depends on
	  runtime version, not compiler version.

Wed Jun 16 01:38:40 2010  Yusuke Endoh  <mame@tsg.ne.jp>

	* ext/fiddle/extconf.rb: check ffi.h even when pkg-config succeeded.
	  On Debian/lenny, which is a "supported" platform, ffi.h is installed
	  in /usr/include/i486-linux-gnu/.  This causes build error when using
	  gcc whose target is not i486-linux-gnu.

Wed Jun 16 00:04:38 2010  Yusuke Endoh  <mame@tsg.ne.jp>

	* test/ruby/test_io.rb (safe_4): does not use Timeout because
	  Timeout.timeout uses Thread#kill which raises SecurityError when
	  $SAFE == 4.  based on a patch from Tomoyuki Chikanaga.
	  [ruby-dev:41484]

	* test/ruby/test_io.rb (test_print_separators): use pipe (test helper
	  method) instead of IO.pipe.  [ruby-dev:41484]

Tue Jun 15 17:14:58 2010  WATANABE Hirofumi  <eban@ruby-lang.org>

	* ext/fiddle/extconf.rb: De Morgan's laws.

Tue Jun 15 12:09:00 2010  WATANABE Hirofumi  <eban@ruby-lang.org>

	* ext/fiddle/extconf.rb: use pkg_config to find ffi.h.

Tue Jun 15 02:31:27 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* Makefile.in, common.mk (clean-ext, clean-enc): clean up cleaning
	  targets.

Mon Jun 14 22:36:09 2010  Tanaka Akira  <akr@fsij.org>

	* test/socket/test_socket.rb (test_udp_server): rescue Errno::ENOSYS
	  for Windows.

	* test/socket/test_nonblock.rb (test_sendmsg_nonblock_error): ditto.

	  [ruby-dev:41597] reported by Masaya Tarui.

Mon Jun 14 17:44:39 2010  Masatoshi SEKI  <m_seki@mva.biglobe.ne.jp>

	* lib/drb/drb.rb: raise DRbConnError instead of ArgumentError if too
	  many arguments. [ruby-dev:41481]

	* test/drb/test_drb.rb: ditto.

	* test/drb/drbtest.rb: ditto.

Mon Jun 14 04:03:55 2010  NARUSE, Yui  <naruse@ruby-lang.org>

	* ext/fiddle/closure.c (dealloc): refix workaround r28300.
	  don't use ffi_closure_alloc, ffi_prep_closure_loc and
	  ffi_closure_free on MACOSX and __linux__.